@@ -1,5 +1,5 @@
 package Message::Passing::AMQP;
-use Moose ();
+use Moo;
 use namespace::autoclean;
 
 our $VERSION = "0.007";
