@@ -1,3 +1,6 @@
+  - Convert to Moo
+    to not add another dependency because Message::Passing is also Moo based
+
 0.007  2015-10-28 09:57:00+01:00 Europe/Vienna
   - Add support for headers exchanges
   - Add a serialize callback to Output::AMQP for simpler header construction
